--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
             android:gravity="center"
-            android:hint="NAME"
+            android:hint="Họ và tên"
             android:inputType="textPersonName"
             android:textColor="@android:color/white"
             android:textColorHint="@color/colorPrimary"
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
             android:gravity="center"
-            android:hint="PHONE NUMBER"
+            android:hint="Số điện thoại"
             android:inputType="phone"
             android:maxLength="10"
             android:textColor="@android:color/white"
@@ -64,7 +64,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
             android:gravity="center"
-            android:hint="EMAIL"
+            android:hint="Email"
             android:inputType="textEmailAddress"
             android:textColor="@android:color/white"
             android:textColorHint="@color/colorPrimary"
@@ -84,7 +84,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
             android:gravity="center"
-            android:hint="PASSWORD"
+            android:hint="Mật khẩu"
             android:maxLength="15"
             android:inputType="textPassword"
             android:textColor="@android:color/white"
@@ -116,7 +116,7 @@
         android:fontFamily="@font/montserrat"
         android:shadowColor="@android:color/black"
         android:background="@drawable/button_round"
-        android:text="Sign Up"
+        android:text="Đăng ký"
         android:textColor="@android:color/white"
         />
 </RelativeLayout>
