--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
-            android:hint="PHONE NUMBER"
+            android:hint="Số điện thoại"
             android:inputType="phone"
             android:maxLength="10"
             android:textColor="@android:color/white"
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
             android:gravity="center"
-            android:hint="PASSWORD"
+            android:hint="Mật khẩu"
             android:inputType="textPassword"
             android:maxLength="10"
             android:textColor="@android:color/white"
@@ -77,7 +77,7 @@
         android:fontFamily="@font/montserrat"
         android:shadowColor="@android:color/black"
         android:layout_marginBottom="@dimen/default_padding_bottom"
-        android:text="Sign In"
+        android:text="Đăng nhập"
         android:textColor="@android:color/white" />
 
 
