--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,9 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="red">#F00000</color>
+    <color name="grey">#F5F5F5</color>
 <!--    <color name="overlayBackground">#7f333639</color>-->
 <!--    <color name="overlayActionBar">#7f333639</color>-->
 </resources>
