update menu nav, navigation

--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -25,6 +25,12 @@
             android:icon="?attr/actionModePasteDrawable"
             android:title="Đơn hàng" />
 
+        <item
+            android:id="@+id/nav_rating"
+            android:height="20sp"
+            android:color="#FFFFFF"
+            android:icon="@drawable/baseline_edit_note_24"
+            android:title="Đánh giá" />
 
         <item
             android:id="@+id/nav_signout"
