--- a/app/src/main/res/layout/fragment_list_completed.xml
+++ b/app/src/main/res/layout/fragment_list_completed.xml
@@ -10,20 +10,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginTop="10dp"
             android:id="@+id/tv_title"
             android:textColor="@color/black"
             android:textAlignment="center"
             android:maxLines="1"
             android:ellipsize="end"
-            android:textSize="@dimen/_16ssp"
+            android:textSize="16sp"
             android:text="@string/txt_order_completed"
             />
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             app:layout_constraintTop_toBottomOf="@id/tv_title"
-            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginTop="10dp"
             android:id="@+id/view"
             android:background="@color/black"
             />
@@ -31,7 +31,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/listOrders"
             android:layout_width="match_parent"
-            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/view"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_height="0dp"/>
