--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -3,10 +3,10 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingStart="20dp"
-    android:paddingEnd="20dp"
-    android:paddingTop="20dp"
-    android:paddingBottom="20dp">
+    android:paddingStart="@dimen/_20sdp"
+    android:paddingEnd="@dimen/_20sdp"
+    android:paddingTop="@dimen/_20sdp"
+    android:paddingBottom="@dimen/_20sdp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,22 +21,22 @@
             android:layout_margin="10dp"
             android:text="@string/txt_rating_title"
             android:textColor="@color/red"
-            android:textSize="11sp"/>
+            android:textSize="@dimen/_11ssp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="@dimen/_10sdp"
             android:id="@+id/tv_star"
-            android:textSize="11sp"
+            android:textSize="@dimen/_11ssp"
             android:textColor="@color/black"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
             android:maxLines="1"
             android:ellipsize="end"
             android:text="@string/txt_description_rate"
@@ -45,12 +45,12 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="@dimen/_10sdp"
             android:maxLines="3"
             android:ellipsize="end"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="@dimen/_10sdp"
             android:id="@+id/tv_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="@dimen/_5sdp"
             android:textColor="@color/black"
             />
     </LinearLayout>
@@ -61,24 +61,24 @@
         android:textColor="@color/black"
         android:visibility="gone"
         android:id="@+id/tv_err"
-        android:textSize="12sp"
-        android:layout_marginTop="20dp"
+        android:textSize="@dimen/_12ssp"
+        android:layout_marginTop="@dimen/_20sdp"
         android:text="@string/txt_dont_have_rating"
         />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/bt_close"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/_20sdp"
         android:background="@color/red"
         android:ellipsize="end"
         android:maxLines="1"
         android:minWidth="0dp"
         android:minHeight="0dp"
-        android:padding="10dp"
+        android:padding="@dimen/_10sdp"
         android:text="@string/txt_close"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="11sp" />
+        android:textSize="@dimen/_11ssp" />
 
 </LinearLayout>
