--- a/app/src/main/res/layout/item_order_completed.xml
+++ b/app/src/main/res/layout/item_order_completed.xml
@@ -2,14 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:padding="10dp"
+    android:padding="@dimen/_10sdp"
     android:background="@color/grey"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/img_item"
-        android:layout_width="90dp"
-        android:layout_height="70dp"
+        android:layout_width="@dimen/_90sdp"
+        android:layout_height="@dimen/_70sdp"
         android:src="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -17,8 +17,8 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
         app:layout_constraintEnd_toStartOf="@id/layout_button"
         android:layout_height="wrap_content"
 
@@ -35,7 +35,7 @@
             android:maxLines="1"
             android:text="Pizza Hai San"
             android:textColor="@color/black"
-            android:textSize="11sp" />
+            android:textSize="@dimen/_11ssp" />
 
         <TextView
             android:id="@+id/tv_order_size"
@@ -43,11 +43,11 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginBottom="@dimen/_5sdp"
             android:text="Size: Medium"
             android:textColor="@color/black"
-            android:textSize="11sp" />
+            android:textSize="@dimen/_11ssp" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -61,7 +61,7 @@
                 android:maxLines="1"
                 android:text="x1"
                 android:textColor="@color/black"
-                android:textSize="11sp"
+                android:textSize="@dimen/_11ssp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -71,11 +71,11 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
                 android:text="135.000"
                 android:textColor="@color/black"
-                android:textSize="11sp"
+                android:textSize="@dimen/_11ssp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tv_order_quantity"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -92,7 +92,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_height="wrap_content">
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="90dp"
+            android:layout_width="@dimen/_90sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/layout_main_rate"
@@ -108,18 +108,18 @@
                 android:minWidth="0dp"
                 android:maxLines="1"
                 android:id="@+id/bt_rate"
-                android:padding="5dp"
+                android:padding="@dimen/_5sdp"
                 android:ellipsize="end"
-                android:textSize="11sp"
+                android:textSize="@dimen/_11ssp"
                 android:textColor="@color/white"
                 android:background="@color/red"
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="90dp"
+            android:layout_width="@dimen/_90sdp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="@dimen/_5sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/layout_main_rate"
             app:layout_constraintEnd_toEndOf="parent">
@@ -134,9 +134,9 @@
                 android:minWidth="0dp"
                 android:maxLines="1"
                 android:id="@+id/bt_view_detail"
-                android:padding="5dp"
+                android:padding="@dimen/_5sdp"
                 android:ellipsize="end"
-                android:textSize="11sp"
+                android:textSize="@dimen/_11ssp"
                 android:textColor="@color/white"
                 android:background="@color/red"
                 />
